<resources>
    <string name="app_name">PasswordManager</string>
    <string name="app_name_monkey">MonKey</string>

    <!-- Login -->
    <string name="username">Username</string>
    <string name="username_hint">Enter your username</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="login_text">LOG IN</string>
    <string name="go_to_signup_text">Not already registered? Sign up here!</string>
    <string name="user_not_found_error_message">This user does not exist</string>
    <string name="incorrect_password_error_message">Incorrect password</string>
    <string name="empty_error_message">Some fields are empty</string>

    <!-- Signup -->
    <string name="signup_text">SIGN UP</string>
    <string name="repeat_password">Repeat password</string>
    <string name="repeat_password_hint">Enter your password again</string>
    <string name="user_already_exists_error_message">This user already exists</string>
    <string name="passwords_match_error_message">Passwords do not match</string>
    <string name="go_to_login_text">Already registered? Log in here!</string>

    <!-- Home -->
    <string name="home_home_text">SITES</string>
    <string name="home_your_sites_text">Your sites</string>
    <string name="home_text">HOME</string>
    <string name="site_info_text">Site info</string>
    <string name="site_text">Site</string>
    <string name="user_site_text">Username</string>
    <string name="password_text">Password</string>
    <string name="hide_password_text">* * * * * * * *</string>

    <!-- New Site -->
    <string name="site_site_text">NEW SITE</string>
    <string name="site_add_new_site_text">Add new site</string>
    <string name="site_name_text">Site name</string>
    <string name="site_user_text">Username</string>
    <string name="site_password_text">Password</string>
    <string name="site_name_text_hint">Enter the site name</string>
    <string name="site_user_text_hint">Enter the username for this site</string>
    <string name="site_password_text_hint">Enter the password for this site</string>
    <string name="autogenerate_text">Autogenerate password</string>
    <string name="add_site_button_text">Add site</string>
    <string name="repeated_site_error_message">You already have a password for this site</string>
    <string name="site_added_successfully_message">New site added successfully</string>

    <!-- Settings -->
    <string name="settings_settings_text">PROFILE</string>
    <string name="settings_your_profile_text">Your profile</string>
    <string name="log_out_text">LOG OUT</string>
    <string name="reset_password_button_text">Reset password</string>
    <string name="delete_account_text">Delete account</string>

    <!-- Sections -->
    <string name="home_section_text">Home</string>
    <string name="new_site_section_text">New site</string>
    <string name="settings_section_text">Settings</string>
</resources>