<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/login_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blood_red">

        <ImageView
            android:id="@+id/app_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="155dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="155dp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher_round">
        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="240dp">

            <TextView
                android:id="@+id/user_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/white">

                <EditText
                    android:id="@+id/user_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/blood_red"
                    android:textCursorDrawable="@null"
                    android:hint="@string/username_hint">
                </EditText>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/password"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/white">

                <EditText
                    android:id="@+id/password_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:backgroundTint="@color/blood_red"
                    android:textCursorDrawable="@null"
                    android:hint="@string/password_hint">
                </EditText>
            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/login_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/white"
                android:text="@string/login_text"
                android:textColor="@color/blood_red"
                android:textAllCaps="false">
            </Button>

            <TextView
                android:id="@+id/go_to_signup_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/go_to_signup_text"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"/>

        </LinearLayout>
    </RelativeLayout>

</layout>