<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/login_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/top_green">

        <ImageView
            android:id="@+id/app_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="155dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="155dp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher_round">
        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="220dp">

            <TextView
                android:id="@+id/user_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/white">

                <EditText
                    android:id="@+id/user_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:background="@null"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp"
                    android:hint="@string/username_hint">
                </EditText>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/white">

                <EditText
                    android:id="@+id/password_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:background="@null"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp"
                    android:hint="@string/password_hint">
                </EditText>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/repeat_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/repeat_password"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/white">

                <EditText
                    android:id="@+id/repeat_password_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:background="@null"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp"
                    android:hint="@string/repeat_password_hint">
                </EditText>
            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/signup_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/white"
                android:text="@string/signup_text"
                android:textColor="@color/top_green"
                android:textAllCaps="false">
            </Button>


        </LinearLayout>
    </RelativeLayout>

</layout>