<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/login_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_light_grey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                style="@style/square_card_view"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:backgroundTint="@color/top_green">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/site_site_text"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold">
                </TextView>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:backgroundTint="@color/top_green"
                style="@style/square_card_view">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/site_add_new_site_text"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textAlignment="center">
                </TextView>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="70dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/site_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginStart="45dp"
                android:text="@string/site_name_text"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/white">

                <EditText
                    android:id="@+id/site_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:background="@drawable/edit_text_background"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp"
                    android:hint="@string/site_name_text_hint">
                </EditText>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/site_user_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginStart="45dp"
                android:text="@string/site_user_text"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/white">

                <EditText
                    android:id="@+id/site_user_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:background="@drawable/edit_text_background"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp"
                    android:hint="@string/site_user_text_hint">
                </EditText>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/site_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginStart="45dp"
                android:text="@string/site_password_text"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/white">

                <EditText
                    android:id="@+id/site_password_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingRight="45dp"
                    android:background="@drawable/edit_text_background"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp"
                    android:hint="@string/site_password_text_hint">
                </EditText>

                <ImageButton
                    android:id="@+id/show_password_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="295dp"
                    android:src="@drawable/ic_outline_remove_red_eye_24"
                    android:background="@null" >

                </ImageButton>
            </com.google.android.material.card.MaterialCardView>

            <CheckBox
                android:id="@+id/autogenerate_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:paddingEnd="30dp"
                android:buttonTint="@color/top_green"
                android:text="@string/autogenerate_text"
                tools:ignore="RtlSymmetry">
            </CheckBox>

            <Button
                android:id="@+id/add_site_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/white"
                android:text="@string/add_site_button_text"
                android:textColor="@color/top_green"
                android:textAllCaps="false">
            </Button>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/nav_buttons"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/home_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_outline_vpn_key_24"
                android:background="@color/white" />

            <ImageButton
                android:id="@+id/new_site_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_add_circle_outline_24"
                android:background="@color/white"  />

            <ImageButton
                android:id="@+id/settings_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_person_outline_24"
                android:background="@color/white"  />

        </LinearLayout>

    </RelativeLayout>

</layout>