<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="user"
            type="es.uam.eps.sasi.passwordmanager.User"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_light_grey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                style="@style/square_card_view"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:backgroundTint="@color/top_green">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/settings_settings_text"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold">
                </TextView>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:backgroundTint="@color/top_green"
                style="@style/square_card_view">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/settings_your_profile_text"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textAlignment="center">
                </TextView>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="70dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/site_widget"
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mtrl_card_spacing"
                android:layout_marginTop="@dimen/mtrl_card_spacing"
                android:layout_marginRight="@dimen/mtrl_card_spacing"
                app:cardBackgroundColor="@color/cardview_light_background">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:textColor="@color/black">
                    </TextView>

                    <TextView
                        android:id="@+id/num_sites"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="40dp"
                        android:textSize="16sp">
                    </TextView>

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/log_out_button"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/white"
                android:text="@string/log_out_text"
                android:textColor="@color/top_green"
                android:textAllCaps="false">
            </Button>

            <Button
                android:id="@+id/delete_account_button"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/red"
                android:text="@string/delete_account_text"
                android:textColor="@color/white"
                android:textAllCaps="false">
            </Button>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_buttons"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/home_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_outline_vpn_key_24"
                android:background="@color/white" />

            <ImageButton
                android:id="@+id/new_site_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_add_circle_outline_24"
                android:background="@color/white"  />

            <ImageButton
                android:id="@+id/settings_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_person_outline_24"
                android:background="@color/white"  />

        </LinearLayout>

    </RelativeLayout>

</layout>